2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs, Gui/TestPad.cs: Moved SearchTest to
	  NUnitService.
	* Gui/TestResultsPad.cs: Fixed bug 366047 - Exceptions in "Test
	  results" pad.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupFileFormat.cs: Track api changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupProject.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* md1format.xml: Added missing file.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml, MonoDevelop.NUnit.mdp,
	  Services/WorkspaceTestGroup.cs, Services/NUnitService.cs,
	  Services/UnitTest.cs, Services/SolutionFolderTestGroup.cs,
	  Services/UnitTestGroup.cs, Services/NUnitProjectTestSuite.cs,
	  Services/SystemTestProvider.cs, Services/ITestProvider.cs,
	  Services/NUnitAssemblyTestSuite.cs,
	  Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs,
	  Gui/TestResultsPad.cs, Gui/NUnitAssemblyGroupNodeBuilder.cs,
	  Gui/TestPad.cs, Project/NUnitAssemblyGroupProject.cs,
	  Project/NUnitAssemblyGroupFileFormat.cs, Makefile.am: New project
	  model changes.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Services/TestProgressMonitor.cs: Refactored status bar.

2008-02-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml, Services/NUnitService.cs: Put back the
	  old results pad.
	* Gui/TestResultsPad.cs: When double clicking a test, jump to the exact
	  line that failed. When selecting a test, scroll the output view so
	  it shows the test's output.
	* Gui/TestPad.cs: Use a toolbar without labels.

2008-02-23  Mike Krüger <mkrueger@novell.com> 
