@@ -1,3 +1,8 @@
+2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Gui/TestResultsPad.cs: Fix bug 387453 - Buttons in NUnit Test Results
+	  throw exception.
+
 2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Services/NUnitService.cs, Gui/TestPad.cs: Moved SearchTest to
